--- a/KafkaTestapp01/KafkaTestapp01.csproj
+++ b/KafkaTestapp01/KafkaTestapp01.csproj
@@ -14,4 +14,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Confluent.Kafka" Version="2.3.0" />
+    </ItemGroup>
+
 </Project>
