--- a/tests/Producer.Tests/Producer.Tests.csproj
+++ b/tests/Producer.Tests/Producer.Tests.csproj
@@ -7,6 +7,7 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,7 +21,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Producer\Producer.csproj" />
+        <ProjectReference Include="..\..\src\Producer\Producer.csproj" />
     </ItemGroup>
 
 </Project>
